syntax = "proto3";

package manager_auth;

option go_package = "./v1;v1";

import "validate/validate.proto";
import "google/protobuf/struct.proto";

message ParseTokenReply{
  uint32 user_id = 1;
  uint32 role_id = 2;
}

message AuthRequest{
  string path = 1;
  string method = 2;
  google.protobuf.Value data = 3;
}

message AuthReply{
  message Scope{
    repeated string list = 1;
  }
  map<string,Scope> scope = 3;
}